--- a/views/pages/dairy.ejs
+++ b/views/pages/dairy.ejs
@@ -6,12 +6,18 @@
         <h1>Content</h1>
         <div class="full-dairy">
             <div class="picture">
-                <img src="<%= dairy.picture %>" alt="">
+                <img src=".<%= dairy.picture %>" alt="">
             </div>
             <div class="content">
-                <h2>
-                    <%= dairy.title %>
-                </h2>
+                <div class="dash">
+                    <h2>
+                        <%= dairy.title %>
+                    </h2>
+                    <form action="/delete" method="GET">
+                        <input type="text" name="id" id="del-id" value="<%=dairy.id%>">
+                        <input type="submit" value="Delete Mee?">
+                    </form>
+                </div>
                 <div class="body">
                     <%- dairy.body %>
                 </div>
