added .chat file, personal

--- a/views/pages/dairy.ejs
+++ b/views/pages/dairy.ejs
@@ -6,7 +6,7 @@
         <h1>Content</h1>
         <div class="full-dairy">
             <div class="picture">
-                <img src=".<%= dairy.picture %>" alt="">
+                <img src="<%= dairy.picture %>" alt="">
             </div>
             <div class="content">
                 <div class="dash">
